tests/error/if_exp_compat.gw
// [contains] incompatible types
maybe ? NULL : 1;
